<resources>
    <string name="app_name">Proyecto_Catedra</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate_aqu">Registrate Aquí</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="con">Contrseña</string>
    <string name="contra">Contraseña</string>
    <string name="inicio_sesi_n">Inicio sesión</string>
    <string name="bienvenido">¡¡Bienvenido!!</string>
    <string name="logo">Logo</string>
    <string name="pacientes">Pacientes</string>
    <string name="empleados">Empleados</string>
    <string name="citas">Citas</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Direccion</string>
    <string name="dui">Dui</string>
    <string name="agregar">Agregar</string>
    <string name="mascota">Mascota</string>
    <string name="editar_paciente">Editar Paciente</string>
    <string name="editar_cita">Editar Cita</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="correo">Correo</string>
    <string name="fecha">Fecha</string>
</resources>